--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
@@ -21,7 +21,6 @@
     <script type="text/javascript">
         $(function () {
             $('select').on('change', function () {
-
                 $('#tblfilterable tbody tr').each(function () {
                     var value = $('#IdTipoFecha').find('option:selected').text();//get value to filter of selected
                     var hiderow = $(this).find("td").eq(6).html();//get value of column status
@@ -32,6 +31,9 @@
                     if (value == hiderow) {
                         var rowindex = $(this).index();
                         $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                    }
+                    if (value == 'Seleccione') {
+                        $('#tblfilterable tbody tr').show();
                     }
                 });
             });
@@ -63,6 +65,27 @@
 
             });//key up.
 
+            /*******/
+            $("#IdA").keyup(function () {
+                 debugger
+                var from = $("#IdDe").val();
+                var To = $(this).val();
+
+                $('#tblfilterable tbody tr').each(function () {
+                    var filterdate = $(this).find("td").eq(4).html().split(" ", 1);//get value of column Fecha Programada
+
+                    if (from == filterdate || To == filterdate) {
+                        var rowindex = $(this).index();
+                        $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                    }
+                    else
+                    {
+                        var rowindex = $(this).index();
+                        $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+                    }
+
+                });
+            });
         });
 
     </script>
@@ -164,16 +187,15 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <b>De:</b>
-                                    @*<dtp:DateTimePicker ID="dtpFechaProgramadaDE" CssClass="dataTxt form-control-sm" Enabled="True" />*@
+                                    <input type="text" id="IdDe" class="form-control"/>
                                 </div>
 
                                 <div class="col-sm-3">
                                     <b>A:</b>
-                                    @*<dtp:DateTimePicker ID="dtpFechaProgramadaA" CssClass="dataTxt form-control-sm" Enabled="True" />*@
+                                    <input type="text" id="IdA" class="form-control"/>
                                 </div>
                             </div>
-
-
+                            <br />
                             <div class="row clearfix">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="table-responsive">
@@ -264,9 +286,9 @@
 @*<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>*@
 </html>
-@section scripts {
-    <script>
-        $("#datetimepicker1").datetimepicker();
-        $("#datetimepicker1").bootstrapMaterialDatePicker();
-    </script>
-}
+@*@section scripts {
+        <script>
+            $("#datetimepicker1").datetimepicker();
+            $("#datetimepicker1").bootstrapMaterialDatePicker();
+        </script>
+    }*@
