CJAL-03/10/2018-Avance Vistas Caja General

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -492,6 +492,7 @@
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
                         <ul class="ml-menu">
                             <li><a href="ui_kit.html">Ventas</a></li>
+                            <li>@Html.ActionLink("Caja General", "Index", "CajaGeneral")</li>
                         </ul>
                     </li>
                     <li>
