--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
@@ -49,7 +49,7 @@
                                 <div class="col-lg-3 col-md-12">
                                     <div class="form-group form-float">
                                         <b>Solicitante:</b>
-                                        @Html.TextBoxFor(m => m.usuarioSolicitante, new { @class = "form-control", @disabled = "disabled" })
+                                        @Html.TextBoxFor(m => m.Solicitante, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-12 form-float">
