--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/ProductoOCDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/ProductoOCDTO.cshtml
@@ -13,31 +13,27 @@
 @Html.HiddenFor(m => m.EsActivoVenta)
 
 <tr>
-    <td>@Model.TipoProducto</td>
+    <td>@Model.ProductoServicioTipo</td>
     <td>@Model.Producto</td>
     <td>
         @Html.LabelFor(m => m.CantidadAComprar, Model.CantidadAComprar.ToString())
         @Html.HiddenFor(m => m.CantidadAComprar)
     </td>
-    <td>@Model.Unidad</td>
+    <td>@Model.UnidadMedida</td>
     <td>@Model.Aplicacion</td>
     <td>@Model.CentroCosto</td>
-    <td width="350px">@Html.DropDownListFor(model => model.IdProdveedor, ViewBag.Proveedores as IEnumerable<SelectListItem>, new { @class = "form-control widthInherit" })</td>
+    <td width="350px">@Html.DropDownListFor(model => model.IdProveedor, ViewBag.Proveedores as IEnumerable<SelectListItem>, new { @class = "form-control widthInherit" })</td>
     <td width="350px">@Html.DropDownListFor(model => model.IdCuentaContable, ViewBag.CuentasContables as IEnumerable<SelectListItem>, new { @class = "form-control widthInherit" })</td>
-    @if (ViewBag.EsGasTransporte == false)
+    @if (Model.EsTransporteGas == true || Model.EsGas == true)
+    {
+
+    }
+    else
     {
         <td>@Html.TextBoxFor(m => m.Precio, new { @class = "form-control  calculaPrecio ", @type = "number", @onkeyup = "javascript: CalcularImporte();", @style = "width:100px;" })</td>
         <td>@Html.TextBoxFor(m => m.Descuento, new { @type = "number", @class = "form-control calculaPrecio", @onkeyup = "javascript: CalcularImporte();", @style = "width:100px;" }) </td>
         <td>@Html.DropDownListFor(model => model.IVA, ViewBag.IVAs as IEnumerable<SelectListItem>, new { @class = "form-control  calculaPrecio", @onchange = "javascript: CalcularImporte();" }) </td>
         <td>@Html.DropDownListFor(model => model.IEPS, ViewBag.IEPs as IEnumerable<SelectListItem>, new { @class = "form-control calculaPrecio", @onchange = "javascript: CalcularImporte();" })</td>
         <td class="align-right">$@Html.LabelFor(m => m.Importe, Model.Importe.ToString())@Html.HiddenFor(m => m.Importe)</td>
-    }
-    else
-    {
-        <td>N/A</td>
-        <td>N/A</td>
-        <td>N/A</td>
-        <td>N/A</td>
-        <td>N/A</td>
     }
 </tr>
